  - ms-sql-hasdbaccess lists database access per user
  - ms-sql-query add support for running custom queries against the database
  - ms-sql-tables lists databases, tables, columns and datatypes with optional
    keyword filtering
  - ms-sql-xp-cmdshell adds support for OS command execution to privileged
    users
  [Patrik]

o [NSE] Fixed bug in rpc.lua library that incorrectly required file handles
  to be 32 octects when calling the ReadDir function. The bug was reported by
  Djalal Harouni. [Patrik]

o Removed --interactive mode, a miniature shell whose primary purpose
  was to hide command line arguments from the process list. It had
  been broken (would segfault during the second scan) since before May
  2009 until February 2010 and was rarely used. The fact that it was
  broken was reported by Juan Carlos Castro y Castro.

o [NSE] Added the afp-serverinfo script that gets a hostname, IP
  addresses, and other configuration information from an AFP server.
  The script, and a patch to the afp library, were originally
  contributed by Andrew Orr and were subsequently enhanced by Patrik
  and David.

o [Zenmap] Added the ability to print Nmap output to a printer. [David]

Nmap 5.30BETA1 [2010-03-29]

o [NSE] Added 37 scripts, bringing the total to 117! They are
  described individually in the CHANGELOG, but here is the list of new
  ones:
    afp-brute afp-path-vuln afp-showmount couchdb-databases
    couchdb-stats daap-get-library db2-das-info dns-service-discovery
    http-methods http-vmware-path-vuln ipidseq jdwp-version ldap-brute
    ldap-rootdse ldap-search lexmark-config mongodb-databases
    mongodb-info mysql-brute mysql-databases mysql-empty-password
    mysql-users mysql-variables nfs-acls nfs-dirlist nfs-statfs
    pgsql-brute qscan smtp-enum-users snmp-interfaces snmp-netstat
    snmp-processes snmp-win32-services snmp-win32-shares
    snmp-win32-software snmp-win32-users ssl-enum-ciphers
  Learn more about any of these at: http://nmap.org/nsedoc/